fixed alignment

--- a/nadifa_html/css/homepagestyles.css
+++ b/nadifa_html/css/homepagestyles.css
@@ -77,7 +77,6 @@ padding: 12px;
   margin-bottom: -100px;
 
 }
-
 .topnav {
   position: relative;
   justify-content: center;
@@ -103,13 +102,11 @@ padding: 12px;
   color: black;
   display: block;
   padding: 14px 20px;
-  position: absolute;
-  left: -10px;
-  bottom: -10px;
-  background: #black;
-  padding: 10px;
-  color: #white;
-  z-index: 999;
+  text-align: center;
+  text-decoration: none;
+  font-size:30px;
+  margin-left:55px;
+  margin-right: 55px;
 }
 
 .topnav ul ul {
@@ -138,7 +135,6 @@ padding: 12px;
     margin: 50;
     padding: 50;
 }
-
 .topnav ul ul li a .img1 {
     position: relative;
     width: 300px;
